# aws-sdk-rust

./: Cargo.toml
sdk/aws-config/: Cargo.toml
sdk/aws-config/src/: credential_process.rs
sdk/aws-config/src/imds/: credentials.rs
sdk/aws-config/src/imds/client/: token.rs
sdk/aws-config/src/sts/: util.rs
sdk/aws-credential-types/: Cargo.toml
sdk/aws-credential-types/src/: credentials_impl.rs  provider.rs  time_source.rs
sdk/aws-credential-types/src/cache/: expiring_cache.rs  lazy_caching.rs
sdk/aws-sig-auth/: Cargo.toml
sdk/aws-sig-auth/src/: event_stream.rs  lib.rs  middleware.rs  signer.rs
sdk/aws-sigv4/: Cargo.toml
sdk/aws-sigv4/src/: date_time.rs  event_stream.rs  lib.rs  sign.rs
sdk/aws-sigv4/src/http_request/: canonical_request.rs  mod.rs  settings.rs  sign.rs
sdk/aws-smithy-async/: Cargo.toml
sdk/aws-smithy-async/src/rt/: sleep.rs
sdk/aws-smithy-types/: Cargo.toml
sdk/aws-smithy-types/src/date_time/: mod.rs
sdk/aws-types/src/: app_name.rs
