[package]
name = "aws-smithy-async"
version = "0.55.2"
authors = ["AWS Rust SDK Team <aws-sdk-rust@amazon.com>", "John DiSanti <jdisanti@amazon.com>"]
description = "Async runtime agnostic abstractions for smithy-rs."
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/awslabs/smithy-rs"

[features]
rt-tokio = ["tokio/time"]

[dependencies]
pin-project-lite = "0.2"
tokio = { version = "1.23.1", features = ["sync"] }
tokio-stream = { version = "0.1.5", default-features = false }
futures-util = { version = "0.3.16", default-features = false }

[target.'cfg(all(target_arch = "wasm32"))'.dependencies]
gloo-timers = { version = "0.2.6", features = ["futures"] }
futures = "0.3.28"
js-sys = "0.3.63"
futures-channel-preview = "0.2.2"
wasm-bindgen = "0.2.86"
web-sys = { version = "0.3.63", features = ["Window"] }
wasm-bindgen-futures = "0.4.36"
oneshot = "0.1.5"
futures-channel = "0.3.28"

[dev-dependencies]
tokio = { version = "1.23.1", features = ["rt", "macros", "test-util"] }
tokio-test = "0.4.2"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
# End of docs.rs metadata